@@ -35,7 +35,7 @@
 #include <QLabel>
 #include <QFile>
 #include <QTextStream>
-#include <QGridLayout>
+#include <QBoxLayout>
 #include <QDomDocument>
 #include <QTextCodec>
 
@@ -44,15 +44,13 @@
 namespace {
   static const int DISCOGS_MAX_RETURNS_TOTAL = 20;
   static const char* DISCOGS_API_URL = "http://api.discogs.com";
-  static const char* DISCOGS_API_KEY = "de6cb96534";
 }
 
 using namespace Tellico;
 using Tellico::Fetch::DiscogsFetcher;
 
 DiscogsFetcher::DiscogsFetcher(QObject* parent_)
-    : XMLFetcher(parent_)
-    , m_apiKey(QLatin1String(DISCOGS_API_KEY)) {
+    : XMLFetcher(parent_) {
   setLimit(DISCOGS_MAX_RETURNS_TOTAL);
   setXSLTFilename(QLatin1String("discogs2tellico.xsl"));
 }
@@ -69,10 +67,7 @@ bool DiscogsFetcher::canFetch(int type) const {
 }
 
 void DiscogsFetcher::readConfigHook(const KConfigGroup& config_) {
-  QString k = config_.readEntry("API Key", DISCOGS_API_KEY);
-  if(!k.isEmpty()) {
-    m_apiKey = k;
-  }
+  Q_UNUSED(config_);
 }
 
 void DiscogsFetcher::resetSearch() {
@@ -82,7 +77,6 @@ void DiscogsFetcher::resetSearch() {
 KUrl DiscogsFetcher::searchUrl() {
   KUrl u(DISCOGS_API_URL);
   u.addQueryItem(QLatin1String("f"), QLatin1String("xml"));
-  u.addQueryItem(QLatin1String("api_key"), m_apiKey);
 
   switch(request().key) {
     case Title:
@@ -153,7 +147,6 @@ Tellico::Data::EntryPtr DiscogsFetcher::fetchEntryHookData(Data::EntryPtr entry_
   KUrl u(DISCOGS_API_URL);
   u.setPath(QString::fromLatin1("/release/%1").arg(release));
   u.addQueryItem(QLatin1String("f"), QLatin1String("xml"));
-  u.addQueryItem(QLatin1String("api_key"), m_apiKey);
 #endif
 //  myDebug() << "url: " << u;
 
@@ -225,55 +218,12 @@ Tellico::StringHash DiscogsFetcher::allOptionalFields() {
 
 DiscogsFetcher::ConfigWidget::ConfigWidget(QWidget* parent_, const DiscogsFetcher* fetcher_)
     : Fetch::ConfigWidget(parent_) {
-  QGridLayout* l = new QGridLayout(optionsWidget());
-  l->setSpacing(4);
-  l->setColumnStretch(1, 10);
-
-  int row = -1;
-
-  QLabel* al = new QLabel(i18n("Registration is required for accessing the %1 data source. "
-                               "If you agree to the terms and conditions, <a href='%2'>sign "
-                               "up for an account</a>, and enter your information below.",
-                                preferredName(),
-                                QLatin1String("http://www.discogs.com/users/api_key")),
-                          optionsWidget());
-  al->setOpenExternalLinks(true);
-  al->setWordWrap(true);
-  ++row;
-  l->addWidget(al, row, 0, 1, 2);
-  // richtext gets weird with size
-  al->setMinimumWidth(al->sizeHint().width());
-
-  QLabel* label = new QLabel(i18n("Access key: "), optionsWidget());
-  l->addWidget(label, ++row, 0);
-
-  m_apiKeyEdit = new KLineEdit(optionsWidget());
-  connect(m_apiKeyEdit, SIGNAL(textChanged(const QString&)), SLOT(slotSetModified()));
-  l->addWidget(m_apiKeyEdit, row, 1);
-  QString w = i18n("The default Tellico key may be used, but searching may fail due to reaching access limits.");
-  label->setWhatsThis(w);
-  m_apiKeyEdit->setWhatsThis(w);
-  label->setBuddy(m_apiKeyEdit);
-
-  l->setRowStretch(++row, 10);
+  QVBoxLayout* l = new QVBoxLayout(optionsWidget());
+  l->addWidget(new QLabel(i18n("This source has no options."), optionsWidget()));
+  l->addStretch();
 
   // now add additional fields widget
   addFieldsWidget(DiscogsFetcher::allOptionalFields(), fetcher_ ? fetcher_->optionalFields() : QStringList());
-
-  if(fetcher_) {
-    // only show the key if it is not the default Tellico one...
-    // that way the user is prompted to apply for their own
-    if(fetcher_->m_apiKey != QLatin1String(DISCOGS_API_KEY)) {
-      m_apiKeyEdit->setText(fetcher_->m_apiKey);
-    }
-  }
-}
-
-void DiscogsFetcher::ConfigWidget::saveConfigHook(KConfigGroup& config_) {
-  QString apiKey = m_apiKeyEdit->text().trimmed();
-  if(!apiKey.isEmpty()) {
-    config_.writeEntry("API Key", apiKey);
-  }
 }
 
 QString DiscogsFetcher::ConfigWidget::preferredName() const {
